[gd_scene load_steps=2 format=3 uid="uid://4dx8fbvpsacl"]

[ext_resource type="Script" path="res://gun.gd" id="1_2whdu"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_2whdu")

[node name="BulletSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
